--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"bunyan": "^1.4.0",
 		"extsprintf": "^1.3.0",
 		"jsprim": "^0.6.1",
+		"cmdln": "^3.2.1",
 		"cmdutil": "^0.1.0",
 		"manta": "^1.5.1",
 		"posix-getopt": "^1.1.0",
