--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "manta-hk",
-	"version": "0.0.1",
+	"version": "1.0.0",
 	"description": "manage Manta housekeeping operations",
 	"author": "Joyent (joyent.com)",
 	"license": "MPL-2.0",
@@ -15,13 +15,21 @@
 		"assert-plus": "^0.1.5",
 		"bunyan": "^1.4.0",
 		"extsprintf": "^1.3.0",
-		"jsprim": "^0.6.1",
+		"jsprim": "^1.0.0",
 		"cmdln": "^3.2.1",
 		"cmdutil": "^0.1.0",
+		"fstream": "^1.0.8",
+		"lstream": "^0.0.4",
 		"manta": "^1.5.1",
 		"posix-getopt": "^1.1.0",
 		"strsplit": "^1.0.0",
+		"tar": "^2.2.1",
+		"vasync": "^1.6.3",
 		"verror": "^1.6.0",
-		"vasync": "^1.6.3"
+		"vstream": "^0.1.0",
+		"vstream-json-parser": "^1.0.0"
+	},
+	"scripts": {
+		"postinstall": "(cd lib/job-assets/dcaudit; npm install)"
 	}
 }
