dircount-audit list subcommand

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"manta": "^1.5.1",
 		"posix-getopt": "^1.1.0",
 		"strsplit": "^1.0.0",
+		"tab": "^0.1.0",
 		"tar": "^2.2.1",
 		"vasync": "^1.6.3",
 		"verror": "^1.6.0",
